# edge-equation-v1

./: .env.example  .gitignore  README.md  ROADMAP_SHIPPED.txt  SESSION_SUMMARY.txt  apply_math.sh  apply_phase3.sh  apply_phase4.sh  apply_phase4bc.sh  apply_phase5_6a.sh  apply_phase_nrfi_integration.sh  push_math_layer.sh  push_phase3.sh  push_phase4.sh  push_phase4bc.sh  push_phase5_6a.sh  push_phase_nrfi_integration.sh  pyproject.toml  run_daily_all.py  run_daily_mlb.py  run_daily_ncaaf.py  run_daily_nfl.py  run_daily_wnba.py  vercel.json
.github/workflows/: backfill-historical.yml  backfill-results.yml  bootstrap-mlb-backfill.yml  closing-lines-snapshot.yml  daily-edge.yml  daily-master.yml  data-refresher.yml  diag.yml  dry-run-preview.yml  email-preview.yml  evening-edge.yml  harvest-all-leagues.yml  harvest-mlb-props.yml  harvest-nba-games.yml  harvest-nhl-games.yml  harvest-wnba-player-games.yml  ledger.yml  mlb-closing-lines.yml  mlb-daily.yml  ncaaf-daily.yml  nfl-daily.yml  nrfi-calibration-audit.yml  nrfi-daily-email.yml  nrfi-daily-odds-snapshot.yml  nrfi-walkforward-train.yml  nrfi-weather-backfill.yml  nrfi-weekly-retrain.yml  overseas-edge.yml  port-mlb-backfill-from-scrapers.yml  premium-daily-preview.yml  prizepicks-fetch.yml  results-settler.yml  settle.yml  spotlight.yml  tests.yml  that-k-report.yml  website-publish-track-record.yml  wnba-daily.yml  wnba-test.yml
api/: data_source.py  main.py
api/routers/: archive.py  auth.py  cards.py  cron.py  health.py  nrfi.py  picks.py  premium.py  slate.py  stripe_router.py
api/schemas/: card.py  health.py  pick.py  premium_pick.py
backtest_reports/: mlb_comprehensive_2026-05-06.md  ncaaf_comprehensive_2026-05-06.md  nfl_comprehensive_2026-05-06.md  wnba_comprehensive_2026-05-06.md
data/: README.md  kbo_2026-04-20.csv  kbo_results_2026-04-13_to_2026-04-19.csv  npb_2026-04-20.csv
deployment/: vercel-api.json
docs/: MANUAL_DAILY_RELEASE.md  MLB_PIPELINE_CUTOVER.md  X_GRAPHIC_PALETTE.md  deployment.md  external-scheduler.md
nrfi/: backtest_historical.py  config.py  email_report.py  requirements-nrfi.txt  run_daily.py
nrfi/abs_2026/: effects.py
nrfi/calibration/: __init__.py
nrfi/data/: __init__.py  lineups.py  scrapers_etl.py  weather.py
nrfi/output/: payload.py
scripts/: _harvest_common.py  backfill_nba_games.py  backfill_nhl_games.py  backfill_player_games.py  backfill_wnba_player_games.py  bootstrap_mlb_backfill.sh  bootstrap_mlb_xstats.py  harvest_overnight.py  sync_scrapers_modules.sh
src/: main.py
tests/: test_ai_graphic_prompt.py  test_auth_stores.py  test_backfill_harvesters.py  test_bankroll.py  test_betting_engine.py  test_bootstrap_mlb_xstats.py  test_cached_only_wire.py  test_cadence.py  test_cadence_workflows.py  test_calibration.py  test_calibration_alerts.py  test_calibration_metrics.py  test_cli.py  test_cli_phase21.py  test_closing_lines_snapshot.py  test_compliance.py  test_compliance_phase20.py  test_context_registry.py  test_conviction_system.py  test_daily_scheduler.py  test_data_cache_guardrails.py  test_data_fetcher.py  test_decay.py  test_email_digest.py  test_email_preview.py  test_email_publisher_smtp_transport.py  test_engine.py  test_event_time_through_feed.py  test_failsafe.py  test_feature_builder.py  test_football_backfill.py  test_football_parlay_engines.py  test_football_skeletons.py  test_force_rebuild.py  test_full_game_conviction_output.py  test_full_game_daily.py  test_full_game_explain.py  test_full_game_ledger.py  test_full_game_output.py  test_full_game_sanity_gate.py  (+155 more)
tests_api/: conftest.py  test_archive.py  test_auth.py  test_cards.py  test_cron.py  test_health.py  test_nrfi_router.py  test_picks.py  test_premium.py  test_premium_gating.py  test_slate.py  test_stripe_router.py
tools/: write_daily_feed.py
web/: .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
website/: .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
(+720 files in other folders)
