[project]
name = "edge-equation"
version = "0.1.0"
description = "Edge Equation v1 – deterministic sports analytics engine."
requires-python = ">=3.10"
authors = [{ name = "Bob" }]

dependencies = [
  "pydantic>=2.7",
  "pandas>=2.2",
  "numpy>=1.26",
  "httpx>=0.27",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
edge-equation = "edge_equation.__main__:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
