[project]
name = "edge-equation"
version = "0.1.0"
description = "Edge Equation v1 – deterministic sports analytics engine."
requires-python = ">=3.10"
authors = [{ name = "Bob" }]

dependencies = [
  "pydantic>=2.7",
  "pandas>=2.2",
  "numpy>=1.26",
  "httpx>=0.27",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.10",
]
# Elite NRFI/YRFI engine — optional ML/data stack. Install with:
#     pip install -e '.[nrfi]'
# These are deliberately optional so the deterministic core stays
# dependency-light. Mirrors nrfi/requirements-nrfi.txt for parity with
# the repo's pip-only install path.
nrfi = [
  "scikit-learn>=1.4",
  "scipy>=1.11",
  "xgboost>=2.0",
  "lightgbm>=4.3",
  "shap>=0.45",
  "joblib>=1.3",
  "pybaseball>=2.2",
  "duckdb>=1.0",
  "pyarrow>=15.0",
  "beautifulsoup4>=4.12",
  "lxml>=5.2",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "plotly>=5.20",
  "streamlit>=1.32",
  "PyYAML>=6.0",
  "tqdm>=4.66",
  "requests>=2.32",
]

[project.scripts]
edge-equation = "edge_equation.__main__:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
# `src` for the deterministic core; `.` so `nrfi` (the optional elite
# subsystem at repo root) is importable in tests.
pythonpath = ["src", "."]
