[project]
name = "edge-equation"
version = "0.1.0"
description = "Edge Equation v1 – deterministic sports analytics engine."
requires-python = ">=3.10"
authors = [{ name = "Bob" }]

dependencies = [
  "pydantic>=2.7",
  "pandas>=2.2",
  "numpy>=1.26",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  # Required by edge_equation.exporters.mlb.workbook to emit
  # mlb_daily.xlsx with the multi-tab layout. Light dep; pure-Python.
  "openpyxl>=3.1",
  # Required by edge_equation.scrapers.mlb.mlb_game_scraper which calls
  # statsapi.mlb.com directly. Could be migrated to httpx later but
  # keeping requests preserves the verbatim port from scrapers.
  "requests>=2.32",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.10",
]
# Elite NRFI/YRFI engine — optional ML/data stack. Install with:
#     pip install -e '.[nrfi]'
# These are deliberately optional so the deterministic core stays
# dependency-light. Mirrors nrfi/requirements-nrfi.txt for parity with
# the repo's pip-only install path.
nrfi = [
  "scikit-learn>=1.4",
  "scipy>=1.11",
  "xgboost>=2.0",
  "lightgbm>=4.3",
  "shap>=0.45",
  "joblib>=1.3",
  "pybaseball>=2.2",
  "duckdb>=1.0",
  "pyarrow>=15.0",
  "polars>=1.0",
  "beautifulsoup4>=4.12",
  "lxml>=5.2",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "plotly>=5.20",
  "streamlit>=1.32",
  "PyYAML>=6.0",
  "tqdm>=4.66",
  "requests>=2.32",
  "openmeteo-requests>=1.2",
  "requests-cache>=1.2",
  # Phase 2c — Cloudflare R2 (S3-compatible) bundle storage.
  "boto3>=1.34",
]

[project.scripts]
edge-equation = "edge_equation.__main__:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
# Single package root: `src` only. The NRFI engine moved into
# `src/edge_equation/engines/nrfi/` in PR #68 so the previous "."
# entry (which existed to make the top-level `nrfi/` importable) is
# no longer needed.
pythonpath = ["src"]
